@@ -1,6 +1,7 @@
 Revision history for Perl extension Wx.
 
 0.76
+	- Added EVT_HTML_XXX event handlers.
 
 0.75  Sun Jul  8 22:43:41 CEST 2007
 	- wxWidgets 2.9.x compatibility.
@@ -44,7 +45,7 @@ Revision history for Perl extension Wx.
 
 0.64  Sun Nov 26 18:32:03 CET 2006
 	- Removed support for wxWidgets 2.7.0 and 2.7.1.
-        - Added Wx::GridCellAutoWrapStringRenderer,
+	- Added Wx::GridCellAutoWrapStringRenderer,
 	  Wx::GridCellAutoWrapStringEditor, Wx::GridCellEnumRenderer,
 	  Wx::GridCellEnumEditor, Wx::GridCellDateTimeRenderer
 	  (thanks to Mark Dootson).
